[CI]修正语法错误

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ go:
 install:
     - go get github.com/issue9/assert
     - go get github.com/issue9/term/colors
-    - go tet github.com/issue9/utils
+    - go get github.com/issue9/utils
