--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,4 @@ install:
     - go get github.com/issue9/assert
     - go get github.com/issue9/term/colors
     - go get github.com/issue9/utils
+    - go get github.com/issue9/version
