--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: go
 go:
     - tip
+    - 1.9
     - 1.8
     - 1.7
     - 1.6
@@ -11,5 +12,6 @@ install:
     - go get github.com/issue9/utils
     - go get github.com/issue9/version
     - go get github.com/issue9/is
+    - go get gopkg.in/yaml.v2
     - go get golang.org/x/text/language
     - go get golang.org/x/text/message
