修正各类错误
- 编译脚本
- 本地化信息
- CI 缺失引用包

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
     - go get github.com/issue9/utils
     - go get github.com/issue9/version
     - go get github.com/issue9/is
+    - go get github.com/logs/writers
     - go get gopkg.in/yaml.v2
     - go get golang.org/x/text/language
     - go get golang.org/x/text/message
