--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,4 @@ install:
     - go get github.com/issue9/is
     - go get github.com/issue9/logs/writers
     - go get gopkg.in/yaml.v2
-    - go get golang.org/x/text/language
-    - go get golang.org/x/text/message
+    - go get golang.org/x/text
