--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,6 @@ os:
 go:
   - tip
   - "1.10"
-  - 1.9
-  - 1.8
 
 install:
   - go get github.com/issue9/assert
@@ -16,6 +14,11 @@ install:
   - go get github.com/issue9/utils
   - go get github.com/issue9/version
   - go get github.com/issue9/is
-  - go get github.com/issue9/logs/writers
+  - go get github.com/issue9/logs
+
   - go get gopkg.in/yaml.v2
   - go get golang.org/x/text
+
+script: go test -v -coverprofile=coverage.txt -covermode=atomic $(go list ./...| grep -v /vendor/)
+
+after_success: bash <(curl -s https://codecov.io/bash)
