完善对自定义文档的定义
update #43

--- a/types/api.yaml
+++ b/types/api.yaml
@@ -18,10 +18,10 @@ queries:
   - size int default desc markdown
   - state array [normal,lock] [normal,lock,delete] 状态码
 params:
-  id: int desc markdown
+  - id int desc markdown
 headers:
-  content-type: desc
-  authorization: auth
+  - content-type desc
+  - authorization auth
 request:
 
 response:
