调整文档样式

--- a/types/api.yaml
+++ b/types/api.yaml
@@ -14,14 +14,14 @@ description: |markdown
   == markdown
 operationID: getuserid
 queries:
-  - page int default desc
-  - size int default desc markdown
-  - state array [normal,lock] [normal,lock,delete] 状态码
+  page: int default desc
+  size: int default desc markdown
+  state: array [normal,lock] [normal,lock,delete] 状态码
 params:
-  - id int desc markdown
+  id: int desc markdown
 headers:
-  - content-type desc
-  - authorization auth
+  content-type: desc
+  authorization: auth
 request:
   description: request body
   content:
