--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ go:
   - tip
   - 1.13.x
 
-script: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
+script:
+  - go generate -v ./...
+  - go test -v -coverprofile=coverage.txt -covermode=atomic ./...
 
 after_success: bash <(curl -s https://codecov.io/bash)
 
