添加上传至 codecov 的脚本

--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,8 @@ charset = utf-8
 [*.{htm,html,js,css}]
 indent_style = space
 indent_size = 4
+
+# yaml
+[*.{yaml,yml}]
+indent_style = space
+indent_size = 2
