--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,3 +33,9 @@ jobs:
       run: |
         go test -v -coverprofile=coverage.txt -covermode=atomic ./...
         bash <(curl -s https://codecov.io/bash)
+
+    - name: Upload Coverage report
+      uses: codecov/codecov-action@v1.0.3
+      with:
+        token: ${{secrets.CODECOV_TOKEN}}
+        file: ./coverage.txt
