--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,6 +8,6 @@ builders:
       - windows
     goarch:
       - amd64
-      - arm64
     ldflags:
-      - -s -w -X 
+      - -s -w -X github.com/caixw/apidoc/v5/internal/vars.commitHash={{.Commit}} -X github.com/caixw/apidoc/v5/internal/vars.buildDate={{time "20060102"}}
+
