--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,13 +1,20 @@
 # goreleaser 配置文件
 
 builds:
-  - id: binary
+  - id: apidoc
+
     goos:
       - darwin
       - linux
       - windows
+
     goarch:
       - amd64
+
+    main: ./cmd/apidoc
+
+    binary: apidoc
+
     ldflags:
       - -s -w -X github.com/caixw/apidoc/v5/internal/vars.commitHash={{.Commit}} -X github.com/caixw/apidoc/v5/internal/vars.buildDate={{time "20060102"}}
 
