添加 message.Type.String() 方法

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,7 @@ jobs:
     
     strategy:
       matrix:
-        os: [macOS-latest, windows-latest, ubuntu-latest]
+        os: [ubuntu-latest, macOS-latest, windows-latest]
         go: ['1.13.x']
         
     steps:
