改进 linux 测试错误

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,6 +30,8 @@ jobs:
         run: go vet -v ./...
         
       - name: Test
+        env:
+          LANG: en
         run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
 
       - name: Upload Coverage report
