作了以下修改
添加 static 包，用以处理文档的相关内容；
添加 vars.AllowConfigFilenames 用以表示配置文件名列表；

--- a/.gitignore
+++ b/.gitignore
@@ -3,22 +3,6 @@
 *.a
 *.so
 
-# Folders
-_obj
-_test
-
-# Architecture specific extensions/prefixes
-*.[568vq]
-[568vq].out
-
-*.cgo1.go
-*.cgo2.c
-_cgo_defun.c
-_cgo_gotypes.go
-_cgo_export.*
-
-_testmain.go
-
 *.exe
 *.test
 *.prof
@@ -26,7 +10,7 @@ _testmain.go
 # vim
 *.swp
 
-# osx
+# macOS
 .DS_Store
 
 # goreleaser
