--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,10 +32,10 @@ jobs:
       - name: Test
         env:
           LANG: en
-        run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
+        run: go test -v -coverprofile='coverage.txt' -covermode=atomic ./...
 
       - name: Upload Coverage report
-        uses: codecov/codecov-action@v1.0.4
+        uses: codecov/codecov-action@v1
         with:
           token: ${{secrets.CODECOV_TOKEN}}
           file: ./coverage.txt
