ci: 修正 action 语法错误

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,12 @@ jobs:
     steps:
 
       - name: Check out code into the Go module directory
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
         uses: actions/checkout@v2
+          with:
+            config:
+              core:
+                autocrlf: false
+                eol: lf
 
       - name: Set up Go ${{ matrix.go }}
         uses: actions/setup-go@v2
