--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,9 @@ name: Release
 on:
   create:
     tags:
-      - 'v*'
-      - '!v*-alpha'
-      - '!v*-beta'
+    - 'v*'
+    - '!v*-alpha'
+    - '!v*-beta'
 
 jobs:
 
@@ -14,22 +14,35 @@ jobs:
 
     steps:
 
-      - name: setup Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.15.x
-        id: go
+    - name: setup Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.16.x
+      id: go
 
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
 
-      - name: release
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          version: latest
-          args: release
-        env:
-          # 如果需要操作其它仓库，比如将 brew 写入其它仓库中，
-          # 则不能使用默认的 GITHUB_TOKEN，需要自行创建。
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+    - name: Login to Github Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GHCR_TOKEN }}
+
+    - name: release
+      uses: goreleaser/goreleaser-action@v2
+      with:
+        version: latest
+        args: release
+      env:
+       # 如果需要操作其它仓库，比如将 brew 写入其它仓库中，
+        # 则不能使用默认的 GITHUB_TOKEN，需要自行创建。
+        GITHUB_TOKEN: ${{ secrets.HOMEBREW }}
 
