--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -30,7 +30,7 @@ builds:
   - -trimpath
 
   ldflags:
-    - -s -w -X github.com/caixw/apidoc/v7/core.metadata={{time "20060102"}}.{{.Commit}}
+    - -s -w -X github.com/caixw/apidoc/v7/core.metadata={{time "20060102"}}.{{.Commit}} -X github.com/caixw/apidoc/v7/core.mainVersion={{.Tag}}
 
 env:
 - CGO_ENABLED=0
